Minor style fixes for the Gif Block wide and full alignments

--- a/src/blocks/gif/styles/style.scss
+++ b/src/blocks/gif/styles/style.scss
@@ -3,15 +3,24 @@
 	padding: 0;
 	width: fit-content;
 
+	img {
+		vertical-align: middle;
+		display: block;
+	}
+
+	&.alignfull,
+	&.alignwide {
+		width: inherit;
+
+		img {
+			width: 100%;
+		}
+	}
+
 	&.aligncenter {
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
 		text-align: center;
-	}
-
-	img {
-		vertical-align: middle;
-		display: block;
 	}
 }
